<resources>
    <string name="app_name">Beckenham Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Beckenham Tour Guide</string>
    <string name="nav_header_subtitle">Not for ourselves alone</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_home">Welcome to Beckenham</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_events">Events</string>
    <string name="menu_celebrities">Famous Residents</string>
    <string name="menu_history">Historical sites</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_search">Search</string>
    <string name="menu_accommodation">Accommodation</string>
    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_transport">Transport</string>
    <string name="menu_restaurant">Restaurants and Cafes</string>
    <string name="name">Name</string>
    <string name="place">Place</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="welcome_image">Welcome image</string>
    <string name="profile_image">Profile image</string>
    <string name="list_image">List image</string>
    <string name="gallery_image">Photo gallery</string>
    <string name="welcome_header">Welcome to \nBeckenham Tour Guide App!</string>
    <string name="welcome_message">Since its early development from a small village to town Beckenham has its motto <b>NON NOBIS SOLUM</b> written on its coat of arms. In English: <b>NOT FOR OURSELVES ALONE</b>.\n\nAnd Beckenham has always been <b>true</b> to this motto.\n\nUnfortunately less so in 2019. The Council where Beckenham belongs, does exactly <b>the opposite</b>. As it stands, it is <b>the only council in London</b> (!) which has <b>refused to take in 50 children refugees</b>.</string>
    <string name="profile_header_text">Sirus Laia</string>
    <string name="profile_body_text">Quite late to learn coding, but I have been always interested in IT.\n\n
        So when I hadn\'t started my official Android programming course, I was running a project
        I called the Nias Keyboard Project. Basically coding for Android before learning how to code :)\n\n
        I have a few apps ideas so I\'m looking forward to finishing the course and starting real work!\n\n
        My Background\n\n
        I was born in Nias Island, the biggest of all islands off West Sumatra, but I left the island,
        when I started my high school years in Sibolga, Sumatra. Then after finishing
        my philosophical study in Pematang Siantar, I went to Münster, Germany,
        where I studied and worked for almost 11 years.\n\n
        I came back to the island just 3 weeks before 2004 tsunami hit Indian ocean, including Nias Island,
        and 3 months before the earthquake finally devastated the island. As programme manager and
        deputy director I got the task of organising the relief, rehabilitation and reconstruction work,
        while building up a humanitarian and social organisation called Caritas Sibolga.\n\n
        After 4 years work in Caritas Sibolga I started a new job in administration in Sibolga.
        But Padang earthquake of 30 Sept 2009 took me back to NGO world. I moved to Padang, West Sumatera,
        to be programme manager of the Caritas joint emergency response for Karina KWI (Caritas Indonesia).\n\n
        In April 2010 I made myself free for a new way of life and then moved to Europe
        (or came back to :) ) as I had always wanted to call Europe my home.</string>
    <string name="attribution">Photo above: the strange statue without name outside the St Mark\'s Square, Bromley.
        All photographs by creator of the app. Other images are either from respective source (bromley.gov.uk,
        wikipedia.org where mentioned or organisers of events) or pixabay.com.</string>
    <string name="beckenham_park">Address: 10 Copers Cope Rd, Beckenham BR3 1NB\nPhone: 020 8663 9199\n\nBeckenham Park Hotel is set in the heart of Beckenham Town Centre on the glories tree lined historical copers cope road. The building has retained many of its characters since when it was originally built in late 18th century. Jones family has established this unique privately-owned hotel some 50 years ago. The hotel almost last one year has spent upgrading and reinstating its facilities to provide warm and welcoming family atmosphere for clients to relax and enjoy their stay.\n\nThe current owners have spent a lot of money and a lot of hard work to provide you exquisite relaxing atmosphere and keeping this period buildings original features.</string>
    <string name="bromley_court">Address: Bromley Hill, Bromley BR1 4JD\n" +
                "Phone: 020 8461 8600\n" +
                "\n" +
                "Ideally located, with a bird\'s eye view of London and the Kent countryside, " +
                "The Bromley Court is the largest and most established hotel in the area.\n" +
                "\n" +
                "We are proud of our rich 200 year history and years of experience offering " +
                "comfortable surroundings, superb food and personal service to all our guests " +
                "whether they are holiday makers, business travellers or are visiting us for a special occasion.\n" +
                "\n" +
                "A warm welcome awaits you in elegant surroundings, including two acres " +
                "of beautifully landscaped gardens.\n" +
                "Begin your stay with a relaxing drink in our Garden Bar and then enjoy our " +
                "hospitality with a light snack or dinner in our orangery-style Garden Restaurant.\n</string>
    <string name="innkeepers">Address: Toby Carvery, Eden Park, 422 Upper Elmers End Rd, Beckenham BR3 3HQ\n" +
                "Phone: 020 8650 2233\n" +
                "\n" +
                "Comfort, character and the warmest of welcomes.\n" +
                "Innkeeper\'s Lodge offer great hotels for those looking for a truly individual stay. " +
                "We have outstanding locations, characterful rooms and contemporary finishes.\n" +
                "\n" +
                "All of our sites are paired with a popular pub or award-winning restaurant, " +
                "so you can dine, relax, and enjoy the finest hospitality. Choose from convenient " +
                "Birmingham locations, to cosy country pubs in the Peak District. " +
                "But wherever you\'re travelling to, you\'ll find many of our hotels are situated in outstanding locations.\n" +
                "\n" +
                "All creature comforts and modern facilities such as comfortable Hypnos beds, " +
                "Freeview TVs, free Wi-Fi and parking, an en suite bathroom with " +
                "powerful shower and a continental breakfast are included in your price.</string>
    <string name="darwin">Obviously the most famous person in this area." +
                "He was born in 1809 in West Midlands, but spent most of his life at Down House, " +
                "20 min auto journey from Beckenham. He is most famous for being a biologist and " +
                "scientist, developing the theory of natural selection, which he explored in " +
                "his groundbreaking book \'On the Origin of Species\'. It was here at Down House " +
                "that he wrote that famous book and built his greenhouse " +
                "where he conducted scientific experiments." +
                "\n" +
                "Down House is a beautiful place to visit, with lovely gardens and lots of rooms " +
                "to explore – you can even stand in the very same study " +
                "where Darwin wrote \'On the Origin of Species\'.</string>
    <string name="bowie">He was in Brixton but lived in Plaistow Grove, Bromley, for most of his childhood. " +
                "About 11 min auto journey from Beckenham. He went to Bromley Technical High School " +
                "in 1958, which we all now know as Ravens Wood. " +
                "Bowie\'s musical career was centred around Bromley and Beckenham, " +
                "and he played gigs at various places including Chislehurst Caves, " +
                "the Three Tuns pub in Beckenham (now Zizzi) and the Bromley Court Hotel." +
                "\n" +
                "BTW there is an appeal going on to save a piece of Bowie history, i.e. the Bowie Bandstand Appeal. " +
                "It aims to restore the bandstand where Bowie played at Croydon Road recreation ground.</string>
    <string name="blyton">Children all over the world loved stories written by Enid Blyton. " +
                "She lived in Shortlands between 1926 and 1929, and there is now a blue plaque " +
                "located at 83 Shortlands Road in memory of her. That\'s only 5 minutes journey " +
                "from Beckenham High Street. Among her world bestselling books: The Secret Seven, " +
                "The Famous Five and The Faraway Tree.</string>
    <string name="wells">If you have read the science fiction book The Time Machine and The War of the Worlds, " +
                "which likely you have, then H.G. Wells is familiar author name to you. " +
                "He was born in the town nearby Bromley (10 minutes journey from Beckenham) " +
                "on the 21st September 1866. He was nominated for the Nobel Prize in Literature four times.\n" +
                "\n" +
                "In front of the now Primark you can see a blue plaque to commemorate his birthplace.</string>
    <string name="odeon">Address: High St, Beckenham BR3 1DY\n" +
                "Phone: 0333 014 4501\n" +
                "Odeon, sometimes stylised as ODEON, is a cinema brand name operating in the United Kingdom, " +
                "Ireland and Norway, which along with UCI Cinemas and Nordic Cinema Group is part of " +
                "the Odeon Cinemas Group subsidiary of AMC Theatres. It uses the famous name of " +
                "the Odeon cinema circuit first introduced in Britain in 1930.\n" +
                "\n" +
                "The first Odeon cinema was opened by Oscar Deutsch in 1928, in Brierley Hill, " +
                "Staffordshire (now West Midlands), although initially called \"Picture House\". " +
                "The first cinema to use the Odeon brand name was Deutsch\'s cinema at Perry Barr, " +
                "Birmingham in 1930. Ten years later Odeon was part of the Rank Organisation " +
                "who continued their ownership of the circuit for a further sixty years. " +
                "Through a number of sales and acquisitions in the early 2000s the company was " +
                "purchased by Terra Firma, which merged Odeon and UCI Cinemas to form " +
                "Odeon UCI Cinemas Group. Most UCI cinemas then took the Odeon brand name in 2006. " +
                "Terra Firma/UCI sold the company to AMC Theatres in November 2016. Ironically, " +
                "UCI was originally formed through the merger of AMC UK and " +
                "Cinema International Corporation in 1989.\n" +
                "\n" +
                "As of 2016, Odeon is the largest cinema chain in the United Kingdom by market share " +
                "(although the Irish cinemas were also included within this figure).</string>
</resources>