<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/drawer_menu_welcome"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/drawer_menu_celebrities"
        android:icon="@drawable/ic_famous_residents"
        android:title="@string/menu_celebrities" />
    <item
        android:id="@+id/drawer_menu_history"
        android:icon="@drawable/ic_historical_sites"
        android:title="@string/menu_history" />
    <item
        android:id="@+id/drawer_menu_entertainment"
        android:icon="@drawable/ic_entertainment"
        android:title="@string/menu_entertainment" />
    <item
        android:id="@+id/drawer_menu_restaurants"
        android:icon="@drawable/ic_restaurants"
        android:title="@string/menu_restaurant" />
    <item
        android:id="@+id/drawer_menu_accommodation"
        android:icon="@drawable/ic_accommodation"
        android:title="@string/menu_accommodation" />
    <item
        android:id="@+id/drawer_menu_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/menu_gallery" />
</group>

</menu>