<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tbmenu_events"
        android:icon="@drawable/ic_events_white"
        android:title="@string/menu_events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tbmenu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never" />
    <item
        android:id="@+id/tbmenu_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/menu_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/tbmenu_about"
        android:icon="@drawable/ic_about_white"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>