<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        style="@style/ListLinearLayout1Style" >

        <ImageView
            android:id="@+id/image"
            android:contentDescription="@string/list_image"
            style="@style/ListImageStyle" />

        <LinearLayout
            style="@style/ListLinearLayout2Style" >

            <TextView
                android:id="@+id/name"
                style="@style/ListNameStyle"
                android:text="@string/name" />

            <TextView
                android:id="@+id/place"
                style="@style/ListPlaceStyle"
                android:text="@string/place" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>