<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/details_image"
            style="@style/DetailImageStyle"
            app:srcCompat="@drawable/beckenham" />

        <TextView
            android:id="@+id/details_name"
            style="@style/DetailNameStyle"
            android:text="@string/name" />

        <TextView
            android:id="@+id/details_place"
            style="@style/DetailPlaceStyle"
            android:text="@string/place" />

        <TextView
            android:id="@+id/details_description"
            style="@style/DetailDescriptionStyle"
            android:text="@string/description" />
    </LinearLayout>

</ScrollView>